# clt2022-rust-workshop

./: Cargo.toml  README.md
book/: Cargo.toml  book.toml
book/examples/: asynchandling.rs  computer.rs  friends.rs  generic_computer.rs  io_computer.rs
book/src/: SUMMARY.md  async.md  cargo.md  ch01-task.md  ch01-topics.md  ch02-task.md  ch02-topics.md  ch03-task.md  ch03-topics.md  ch04-topics.md  control.md  docs.md  generics.md  lib.rs  lifetime.md  memory.md  ownership.md  programm.md  rust.md  stack_program.dia  structs.md  structure.md  testing.md  traits.md  types.md  webservice.md
webservice/: Cargo.toml
webservice/src/: main.rs
