[package]
name = "workshop_clt2022"
version = "0.1.0"
edition = "2021"
description = "Ein Workshop in Rust für die CLT2022"
homepage = "https://github.com/aboehm/clt2022-simple-rust"
repository = "https://github.com/aboehm/clt2022-simple-rust"
license = "BSD-2-Clause"
keywords = ["web", "workshop"]
categories = ["web-programming"]

[dependencies]
rand = "0.8.5"
tokio = { version = "1.17.0", features = ["full"] }

[lib]
name = "workshop"
