[package]
name = "workshop_clt2022"
version = "0.1.1"
edition = "2021"
description = "Ein Workshop in Rust für die CLT2022"
homepage = "https://aboehm.github.io/clt2022-einfach-mal-rust-machen/index.html"
repository = "https://github.com/aboehm/clt2022-rust-workshop"
license = "BSD-2-Clause"
keywords = ["web", "workshop"]
categories = ["web-programming"]

[dependencies]
rand = "0.8.5"
tokio = { version = "1.17.0", features = ["full"] }

[lib]
name = "workshop"
